# godot-rust

./: .gitignore  run.sh  run2.sh
godot/: HelloWorld.gdextension  Main.tscn  icon.svg.import  player.gd  project.godot
moddable-pong/: Automerge.gdextension  main.tscn  project.godot
moddable-pong/addons/patchwork/: file_change_listener.gd  file_system_sync.gd  history_sidebar.gd  history_sidebar.tscn  patchwork.gd  plugin.cfg  sidebar.gd  sidebar.tscn
moddable-pong/addons/plugin_refresher/: plug_icon.svg.import  plug_list_icon.svg.import  plug_switch_icon.svg.import
plugin/: Cargo.toml
plugin/src/: am.rs
rust/: Cargo.toml  Dockerfile
rust/client/: Cargo.toml
rust/client/src/: main.rs
rust/plugin/: Cargo.toml
rust/plugin/src/: automerge_fs.rs  godot_scene.rs  lib.rs  repo.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
rust/src/: am.rs  lib.rs  player.rs  repo.rs
server/: Cargo.toml
server/src/: main.rs
