[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.5.12"
#automerge_repo = { version = "0.1.0", features = ["tokio"] }
automerge_repo = { git="https://github.com/automerge/automerge-repo-rs.git", features = ["tokio"] }
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
